--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://portfolio-server-9qz2.onrender.com/api/$1"
+      "destination": "/index.html"
     }
   ]
 }
