--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.2.0",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.11.3",
+    "gsap": "^3.13.0",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -25,6 +28,7 @@
     "react-router-dom": "^7.6.0",
     "react-scroll": "^1.9.3",
     "socket.io-client": "^4.8.1",
+    "three": "^0.178.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
